fix display of ehader on mobile devices

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,26 +1,12 @@
 .about {
-    position: relative;
     text-align: center;
-
-    &__ruler {
-        &--right {
-            position: absolute;
-            top: 0;
-            left: -350px;
-        }
-
-        &--left {
-            position: absolute;
-            top: 0;
-            right: 350px;
-        }
-    }
 
     &__info {
         &-title {
             text-transform: uppercase;
             position: relative;
             margin: 2em auto 1.3em auto;
+            width: 20rem;
 
             &::before {
                 content: "";
@@ -41,12 +27,12 @@
     &__info-subtitle {
         text-transform: uppercase;
         position: relative;
-        margin: auto;
+        margin: 1.5rem auto 1rem auto;
 
         &::before {
             content: "";
             position: absolute;
-            top: 40%;
+            top: 16%;
             left: -1em;
             background-color: $main-color-shaded;
             width: 8em;
@@ -110,10 +96,10 @@
     &__img {
 
         &-1 {
-            height: 60vw;
+            height: 25rem;
             grid-column-start: 1;
             grid-row-start: 3;
-            margin: auto;
+            margin: 1.5rem auto;
 
             @include mq(small) {
                 height: 250px;
@@ -130,8 +116,8 @@
         }
 
         &-2 {
-            margin: auto;
-            height: 60vw;
+            margin: 2.5rem auto;
+            height: 25rem;
 
             @include mq(small) {
                 height: 250px;
@@ -149,8 +135,8 @@
         }
 
         &-3 {
-            margin: auto;
-            height: 50vw;
+            margin: 2.5rem auto;
+            height: 20rem;
             grid-column-start: 1;
             grid-row-start: 3;
 
