--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@ body {
 .header {
     position: relative;
     z-index: -99;
-    height: 100vh;
+    min-height: 100vh;
 
     &__social {
         width: 22px;
@@ -66,19 +66,23 @@ body {
     }
 
     &__frame {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
         position: relative;
-        margin: 0 auto 12vh auto;
+        // margin: 0 auto 12vh auto;
         width: 100vw;
-        height: 80vh;
-        display: grid;
-        grid-template-columns: 35% 65%;
-        grid-template-rows: 33% 33% 33%;
+        min-height: 90vh;
 
         @include mq(small) {
             grid-template-columns: 50% 50%;
         }
 
         @include mq(medium) {
+            display: grid;
+            grid-template-columns: 35% 65%;
+            grid-template-rows: 33% 33% 33%;
             margin: 10vh auto;
             width: 80vw;
             border: #fff 2px dashed;
@@ -148,21 +152,27 @@ body {
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
-        // transform: translateX(-200%);
-        margin: 20rem 5rem;
+        margin: 2rem auto;
+        text-align: center;
         font-size: 4rem;
         line-height: 5.5rem;
         text-transform: uppercase;
         font-style: normal;
         width: 359px;
-
         letter-spacing: 4px;
+
+        @include mq(small) {
+            margin: 28rem 6rem;
+        }
 
         @include mq(medium) {
             margin: auto 6rem;
             font-size: 5rem;
-            padding-right: 15rem;
+            // padding-right: 15rem;
+        }
+        @include mq(large) {
             border-top: solid 1px #fff;
+            padding-top: 1rem;
         }
 
         @include mq(xlarge) {
@@ -176,20 +186,25 @@ body {
     &__title-small {
         grid-column-start: 1;
         grid-row-start: 2;
-        margin: 15rem 5rem;
-        font-size: 2.2rem;
-        border-bottom: solid 1px #fff;
-        padding-right: 15rem;
-        width: 23rem;
+        margin: 2rem auto;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 4rem;
+        width: 30rem;
         letter-spacing: 0.2rem;
 
         @include mq(small) {
-            margin: auto 1rem;
+            margin: 20rem 6rem;
+            padding-right: 15rem;
         }
 
         @include mq(medium) {
             margin: auto 6rem;
             font-size: 2.4rem;
+        }
+        @include mq(large) {
+            border-bottom: solid 1px #fff;
+            padding-bottom: 1rem;
         }
 
         @include mq(xlarge) {
@@ -203,6 +218,14 @@ body {
     &__a {
         display: inline-block;
         transform: skew(-20deg);
+        font-size: 2rem;
+        line-height: 3.6rem;
+        text-align: center;
+        width: 100%;
+
+        @include mq(medium) {
+            font-size: 1.8rem;
+        }
 
         @include mq(xlarge) {
             font-size: 1.8rem;
@@ -211,16 +234,15 @@ body {
 
     &__button {
         grid-column-start: 1;
-        // grid-column-end: 1;
-        // grid-row-start: 4;
+        grid-column-end: 2;
+        grid-row-start: 4;
         padding: 1rem;
-        margin: 5rem 5rem;
+        margin: 5rem auto;
         color: #fff;
         background: $main-color;
         border: 2px solid #FFFFFF;
-        // height: 3.6rem;
-        width: 100px;
-        line-height: 3.6rem;
+        height: 4rem;
+        width: 70vw;
         z-index: 3;
         transform: skew(20deg);
         box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
@@ -228,13 +250,12 @@ body {
         outline-color: rgba(255, 255, 255, .5);
         outline-offset: -2px;
         transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+        justify-self: end;
 
         @include mq(small) {
             margin: 5rem auto;
             line-height: 3.6rem;
             width: 14rem;
-            grid-column-start: 1;
-            grid-row-start: 4;
         }
 
         @include mq(medium) {
@@ -257,6 +278,10 @@ body {
             margin: auto 12rem;
         }
 
+        & a{
+            text-decoration: none;
+            line-height: 3.6rem;
+        }
         &:hover {
             cursor: pointer;
             border: 2px solid $main-color;
@@ -282,32 +307,44 @@ body {
     }
 
     &__logo {
-        position: absolute;
-        top: 0;
-        left: 0;
         height: 10rem;
-        margin: 2.4rem 2.4rem auto auto;
+        margin: 3rem;
         border: 1px #fff dashed;
         padding: 2rem 3rem 0 4rem;
-        border-radius: 0 0 0 8rem;
+        border-radius: 0 0 8rem 0;
+        align-self: start;
 
         @include mq(small) {
+            border-radius: 0 0 0 8rem;
+            position: absolute;
+            top: 2rem;
+            left: 2rem;
+            height: 13rem;
+        }
+
+        @include mq(medium) {
             grid-column-start: 2;
+            right: 2rem;
+            height: 12rem;
+        }
+        @include mq(large) {
             height: 16rem;
         }
     }
 
     &__img {
-        grid-column-start: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
         grid-row-start: 3;
         grid-row-end: 4;
-        margin: auto;
-        width: 25rem;
+        margin: 2rem auto;
+        width: 35rem;
 
         @include mq(small) {
             display: inline;
             grid-row-start: 2;
             width: 35rem;
+            grid-column-start: 2;
         }
 
         @include mq(medium) {
@@ -327,7 +364,7 @@ body {
 .scroll {
     height: 10rem;
     position: absolute;
-    bottom: -10vh;
+    bottom: 0;
     left: 50%;
     transform: translate(-50%, 0);
     padding-bottom: 1em;
