--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -2,14 +2,12 @@
     box-sizing: border-box;
     z-index: 5;
     width: 100vw;
-    position: fixed;
     left: 0;
     top: 0;
     background-size: 25rem;
-    box-sizing: border-box;
     font-size: 2em;
     transition: 0.2s;
-
+    height: 10rem;
 
     &--transparent {
         border: 1px solid #fff;
@@ -23,13 +21,13 @@
     }
 
 
-
     @include mq(medium) {
         display: block;
     }
 
 
     &__container{
+
         margin: 0 auto;
         display: flex;
         flex-direction: column;
